# episodic

./: .cursorignore  .gitignore  .markdownlint-cli2.jsonc  Lesson 01.md  README.md  Writing for Visual Novels- Methods and Madness.txt  alive-progress-problems-and-solutions.md  build.md  comprehensive-app-wireframe.tsx  comprehensive_stt_benchmark.py  conversation-analysis.md  dd.md  ddd.md  decisions.md  duo tech stack research.md  duolingo-lesson-format.md  french-language-lessons.md  global.css  lsf-ceft.md  mission-planning.md  narrative-exploration-v3-plan.md  package-lock.json  package.json  phonemodle.md  research.md  russian_new.txt  scratch.md  scratchpad.md  swedish2.md  swedish3x.md  template.md  templateSingleLesson.md  templatev2.md  templatev3.md  templatev4.md  transcribe_french_lessons.sh
all-language-data-work/pimsleur-data/: pyproject.toml
all-language-data-work/pimsleur-data/02_scripts/: analyze_lessons_utterances_db_v2.py  analyze_lessons_utterances_db_v2_csv.py  analyze_persistent_patterns.py  analyze_persistent_patterns_csv_v2.py  convert_archive_utterances.py  convert_explicit_phrases.py  extract_conversations.py  pimsleur_algorithm.py
all-language-data-work/pimsleur-data/02_scripts/analysis/: lesson_01_conversations.md  lesson_01_utterances.csv  lesson_01_utterances_dedup.csv  lesson_02_conversations.md  lesson_02_utterances.csv  lesson_03_conversations.md  (+17 more)
all-language-data-work/pimsleur-data/tests/: test_cognitive_load.py  test_integration.py  test_pimsleur_algorithm.py
all-language-data-work/pimsleur-gen/: .gitignore  ANALYSIS_COMPLETE.txt  CLAUDE.md  CONFIDENCE_REFERENCE.md  CROSS_LEVEL_ANALYSIS.md  DRILL_STRUCTURE_L2_L5.md  GRAMMAR_STAIRCASE.md  PIMSLEUR_MODEL.md  RESEARCH_FINDINGS.md  TEST_SUMMARY.txt  TODO.md  VALIDATION_SCORECARD.md  VOCABULARY_SELECTION.md  main.py  pyproject.toml
all-language-data-work/pimsleur-gen/data/: french_lesson_metrics.json
all-language-data-work/pimsleur-gen/scripts/: extract_vocabulary.py
all-language-data-work/pimsleur-gen/src/: __init__.py  drill_patterns.py  generator.py  models.py  parser.py  spaced_repetition.py
all-language-data-work/pimsleur-gen/tests/: __init__.py  test_cross_language.py  test_drill_patterns.py  test_generator.py  test_models.py  test_parser.py  test_real_data.py  test_spaced_repetition.py
pimsleur-data/: .env  .gitignore  .pylintrc  README.md  analyze_lessons.py  mypy.ini  output.md  phrase_extraction_proposal.md  pyproject.toml
pimsleur-data/.claude/: settings.local.json
pimsleur-data/01_raw_data/transcripts/: French_I_-_Lesson_03_human_eval.txt  French_I_-_Lesson_09_human_eval.txt  French_I_-_Lesson_11_human_eval.txt  French_I_-_Lesson_12_human_eval.txt  French_I_-_Lesson_13_human_eval.txt  French_I_-_Lesson_15_human_eval.txt  French_I_-_Lesson_17_human_eval.txt  French_I_-_Lesson_22_human_eval.txt  French_I_-_Lesson_24_human_eval.txt  French_I_-_Lesson_27_human_eval.txt  French_I_-_Lesson_28_human_eval.txt  French_I_-_Lesson_29_human_eval.txt
pimsleur-data/02_scripts/: analyze_dependencies.py  analyze_lessons_utterances_db_v2.py  analyze_lessons_utterances_db_v2_csv.py  analyze_persistent_patterns.py  analyze_persistent_patterns_csv_v2.py  analyze_spaced_repetition.py  cognitive_load_analysis_v4.py  cross_lesson_analysis_v3.py  database_writer.py  deduplicate_utterances.py  extract_conversations.py  schema.sql
pimsleur-data/02_scripts/analysis/: cross_lesson_integration_db.py  enhanced_template_extraction.py  lesson_03_utterances.csv  lesson_04_utterances.csv  lesson_05_utterances.csv  lesson_06_utterances.csv  lesson_07_utterances.csv  lesson_08_utterances.csv  lesson_10_utterances.csv  lesson_15_utterances.csv  lesson_17_utterances.csv  lesson_19_utterances.csv  lesson_24_utterances.csv  lesson_27_utterances.csv  lesson_28_utterances.csv  lesson_30_utterances.csv  persistent_pattern_analysis.md  persistent_patterns.csv
pimsleur-data/02_scripts/archive/: README.md  analyze_lessons_utterances.py  demonstrate_fixes.py  load_fixed_data_postgres.py  load_fixed_data_to_supabase.py  test_fixes.py
pimsleur-data/02_scripts/db/: database_writer.py
pimsleur-data/02_scripts/extraction/: analyze_lessons_phrases_db.py  analyze_lessons_utterances_db.py  analyze_lessons_utterances_db_v2.py
pimsleur-data/03_phase1_analysis/data/: cross_lesson_analysis_phase1_5_fixed.json  template_analysis_report.json
pimsleur-data/03_phase1_analysis/reports/: phase1_summary_report.md
pimsleur-data/04_visualizations/: pimsleur_algorithm_viz_archive.tsx
pimsleur-data/05_documentation/: implementation_guide_phase1_5.md  proposal_v3.md  proposal_v3_1.md
pimsleur-data/99_archive/: French_I_-_Lesson_01_human_eval.md  groq_models_limits.md  migrate_to_utterance_centric.py  production_pipeline.py  proposal_v2.md
pimsleur-data/99_archive/scripts_archive/: cross_lesson_integration.py
pimsleur-data/99_archive/v1_archive/: analyze_lessons_phrases.py  analyze_lessons_v2_groq.py  cognitive_load_analysis.py
pimsleur-data/99_archive/v2_archive/: test_with_existing_data.py
pimsleur-data/analysis_results/: French_I_-_Lesson_01_explicit_phrases.csv  French_I_-_Lesson_02_explicit_phrases.csv
pimsleur-data/pimsleur-01-lessons/: French_I_-_Lesson_01_human_eval.md  French_I_-_Lesson_02_human_eval.txt  French_I_-_Lesson_04_human_eval.txt  French_I_-_Lesson_05_human_eval.txt  French_I_-_Lesson_06_human_eval.txt  French_I_-_Lesson_08_human_eval.txt  French_I_-_Lesson_09_human_eval.txt  French_I_-_Lesson_17_human_eval.txt  French_I_-_Lesson_19_human_eval.txt  French_I_-_Lesson_21_human_eval.txt  French_I_-_Lesson_28_human_eval.txt  French_I_-_Lesson_30_human_eval.txt
pimsleur-data/tests/: __init__.py  test_pattern_analysis.py
pronunciation-experiment/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
(+1683 files in other folders)
