[project]
name = "pronunciation-experiment"
version = "0.1.0"
description = "Pronunciation assessment prototype using Qwen3-ASR + ForcedAligner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-asr",
    "gradio",
    "phonemizer",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

# PyTorch CUDA index
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
